--- a/ninepy/templates/ninepy/post_details.html
+++ b/ninepy/templates/ninepy/post_details.html
@@ -1,1 +1,32 @@
-{{ post_details.id }}
+{% extends 'ninepy/base.html' %}
+ 
+{% block content %}
+	<div class="row">
+	  <div class="col-sm-12 col-md-12">
+	    <div class="frame">
+	        <h3>{{ post.title }}</h3>
+	     	<img src="{{ post.media.url }}" alt="{{ post.title }}" />
+	     	<div class="caption">
+		        <p>
+		        	<a href="#" class="btn btn-primary" role="button">Button</a> 
+		        	<a href="#" class="btn btn-default" role="button">Button</a>
+		        </p>
+		    </div>		      
+	    </div>
+	  </div>
+	</div>
+
+	{% for comment in post.comment_set.all %}
+		<li>
+			-> {{ comment.author_name }} {{ comment.content }}
+			<ul>
+				{% for reply in comment.comment_set.all %}
+				<li>
+					{{ reply.content }}
+				</li>
+				{% endfor %}
+			</ul>
+		</li>
+	{% endfor %}
+
+{% endblock %}
